examples/smlfmt-1.2.0/test/fail/bad-close-comment.sml
(* val x = 5 *) *)
val y = foo (*
val z = *) 7
